--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = faultstat
-url = https://github.com/ColinIanKing/faultstat/archive/refs/tags/V0.01.10.tar.gz
+url = https://github.com/ColinIanKing/faultstat/archive/refs/tags/V0.01.11.tar.gz
 archives = 
 giturl = https://github.com/ColinIanKing/faultstat.git
 domain = 
@@ -59,6 +59,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = false
 # configure build for avx512
